@@ -36,6 +36,13 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx512m -XX:MaxPermSize=192m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
